Add HTML boilerplate and new lists file
Added standard HTML structure to Heading_Elements.html for improved semantics and compatibility. Created a new, empty Lists_in_HTML.html file for future content on HTML lists.

--- a/HTML (Level 1)/Heading_Elements.html
+++ b/HTML (Level 1)/Heading_Elements.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heading Element</title>
+</head>
+<body>
 
 <p>The  &lt;h1&gt; to &lt;h6&gt; HTML elements represent six level of section headings.
     &lt;h1&gt; is the highest section level and &lt;h6&gt;is the lowest.  </p>
@@ -8,3 +16,6 @@
 <h4>This is heading 4 </h4>
 <h5>This is heading 5 </h5>
 <h6>This is heading 6 </h6>
+    
+</body>
+</html>
