Add HTML boilerplate to Paragraph_Element.html
Wrapped existing content in standard HTML structure with DOCTYPE, html, head, and body tags. Added meta tags and a title for improved document semantics. Also included an additional sample paragraph.

--- a/HTML (Level 1)/Paragraph_Element.html
+++ b/HTML (Level 1)/Paragraph_Element.html
@@ -1,3 +1,14 @@
-<p>In HTML, the &lt;p&gt; tag is used to define a paragraph of text.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>paragraph Element</title>
+</head>
+<body>
+ <p>In HTML, the &lt;p&gt; tag is used to define a paragraph of text.</p>
 
 <p>Paragraphs are typically displayed with a space above and below them, making them distinct from other elements on the page.</p>
+<p>This is my first html paragraph </p>   
+</body>
+</html>
